Modificata la risposta del path /profiles/{username}
